bpo-31592: Fix an assertion failure in Python parser in case of a bad unicodedata.normalize(). (#3767)